--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
-    "express": "^4.16.3",
-    "mysql2": "^1.5.3",
-    "sequelize": "^4.37.6",
     "body-parser": "^1.17.1",
-    "jsonwebtoken": "^7.3.0"
+    "express": "^4.16.3",
+    "jsonwebtoken": "^7.3.0",
+    "mysql2": "^1.5.3",
+    "nodemailer": "^4.6.8",
+    "sequelize": "^4.37.6"
   }
 }
